// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`field-builder: system-only required coding slice valueConstraint of the parent CodeableConcept 1`] = `undefined`;

exports[`TypeScript profile slice corrections system-only coding slices: full profile module pinned 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { CodeableConcept } from "../../hl7-fhir-r4-core/CodeableConcept";
import type { Observation } from "../../hl7-fhir-r4-core/Observation";

import {
    ensureProfile,
    validateRequired,
    validateExcluded,
    validateFixedValue,
    validateSliceCardinality,
    validateSliceFields,
    validateEnum,
    validateReference,
    validateChoiceRequired,
    validateChoiceProhibited,
    validateMustSupport,
} from "../../profile-helpers";

export type SystemOnlyCodingObservationProfileRaw = {
    bodySite: CodeableConcept;
    status: ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown");
    code: CodeableConcept;
}

// CanonicalURL: http://example.org/StructureDefinition/system-only-coding (pkg: codegen.test#1.0.0)
export class SystemOnlyCodingObservationProfile {
    static readonly canonicalUrl = "http://example.org/StructureDefinition/system-only-coding";

    private resource: Observation;

    constructor (resource: Observation) {
        this.resource = resource;
    }

    static from (resource: Observation) : SystemOnlyCodingObservationProfile {
        if (!resource.meta?.profile?.includes(SystemOnlyCodingObservationProfile.canonicalUrl)) {
            throw new Error(\`SystemOnlyCodingObservationProfile: meta.profile must include \${SystemOnlyCodingObservationProfile.canonicalUrl}\`)
        }
        const profile = new SystemOnlyCodingObservationProfile(resource);
        const { errors } = profile.validate();
        if (errors.length > 0) throw new Error(errors.join("; "))
        return profile;
    }

    static is (resource: unknown) : resource is Observation {
        if (typeof resource !== "object" || resource === null) return false;
        const r = resource as { resourceType?: string; meta?: { profile?: string[] } };
        if (r.resourceType !== "Observation") return false;
        return (r.meta?.profile ?? []).includes(SystemOnlyCodingObservationProfile.canonicalUrl);
    }

    static apply (resource: Observation) : SystemOnlyCodingObservationProfile {
        ensureProfile(resource, SystemOnlyCodingObservationProfile.canonicalUrl);
        return new SystemOnlyCodingObservationProfile(resource);
    }

    static createResource (args: SystemOnlyCodingObservationProfileRaw) : Observation {
        const resource: Observation = {
            resourceType: "Observation",
            bodySite: args.bodySite,
            status: args.status,
            code: args.code,
            meta: { profile: [SystemOnlyCodingObservationProfile.canonicalUrl] },
        }
        return resource;
    }

    static create (args: SystemOnlyCodingObservationProfileRaw) : SystemOnlyCodingObservationProfile {
        const resource = SystemOnlyCodingObservationProfile.createResource(args);
        return SystemOnlyCodingObservationProfile.apply(resource);
    }

    toResource () : Observation {
        return this.resource;
    }

    // Field accessors
    getBodySite () : CodeableConcept | undefined {
        return this.resource.bodySite as CodeableConcept | undefined;
    }

    setBodySite (value: CodeableConcept) : this {
        Object.assign(this.resource, { bodySite: value });
        return this;
    }

    getStatus () : ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown") | undefined {
        return this.resource.status as ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown") | undefined;
    }

    setStatus (value: ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown")) : this {
        Object.assign(this.resource, { status: value });
        return this;
    }

    getCode () : CodeableConcept | undefined {
        return this.resource.code as CodeableConcept | undefined;
    }

    setCode (value: CodeableConcept) : this {
        Object.assign(this.resource, { code: value });
        return this;
    }

    // Extensions
    // Slices
    // Validation
    validate(): { errors: string[]; warnings: string[] } {
        const profileName = "SystemOnlyCodingObservation"
        const res = this.resource
        return {
            errors: [
                ...validateRequired(res, profileName, "bodySite"),
                ...validateRequired(res, profileName, "status"),
                ...validateRequired(res, profileName, "code"),
            ],
            warnings: [],
        }
    }

}

"
`;

exports[`TypeScript profile slice corrections colliding slice accessor: full profile module pinned 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { CodeableConcept } from "../../hl7-fhir-r4-core/CodeableConcept";
import type { Observation, ObservationComponent } from "../../hl7-fhir-r4-core/Observation";

export type CollidingSliceObservation_Component_CategorySliceFlat = Omit<ObservationComponent, "code">;
export type CollidingSliceObservation_Component_CategorySliceFlatAll = CollidingSliceObservation_Component_CategorySliceFlat;

import {
    ensureProfile,
    applySliceMatch,
    matchesValue,
    setArraySlice,
    getArraySlice,
    ensureSliceDefaults,
    validateRequired,
    validateExcluded,
    validateFixedValue,
    validateSliceCardinality,
    validateSliceFields,
    validateEnum,
    validateReference,
    validateChoiceRequired,
    validateChoiceProhibited,
    validateMustSupport,
} from "../../profile-helpers";

export type CollidingSliceObservationProfileRaw = {
    status: ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown");
    code: CodeableConcept;
    component?: ObservationComponent[];
}

// CanonicalURL: http://example.org/StructureDefinition/colliding-slice (pkg: codegen.test#1.0.0)
export class CollidingSliceObservationProfile {
    static readonly canonicalUrl = "http://example.org/StructureDefinition/colliding-slice";

    private static readonly categorySliceMatch: Record<string, unknown> = {
        "code": {"coding":[{"system":"http://snomed.info/sct","code":"276885007"}]},
    }

    private resource: Observation;

    constructor (resource: Observation) {
        this.resource = resource;
    }

    static from (resource: Observation) : CollidingSliceObservationProfile {
        if (!resource.meta?.profile?.includes(CollidingSliceObservationProfile.canonicalUrl)) {
            throw new Error(\`CollidingSliceObservationProfile: meta.profile must include \${CollidingSliceObservationProfile.canonicalUrl}\`)
        }
        const profile = new CollidingSliceObservationProfile(resource);
        const { errors } = profile.validate();
        if (errors.length > 0) throw new Error(errors.join("; "))
        return profile;
    }

    static is (resource: unknown) : resource is Observation {
        if (typeof resource !== "object" || resource === null) return false;
        const r = resource as { resourceType?: string; meta?: { profile?: string[] } };
        if (r.resourceType !== "Observation") return false;
        return (r.meta?.profile ?? []).includes(CollidingSliceObservationProfile.canonicalUrl);
    }

    static apply (resource: Observation) : CollidingSliceObservationProfile {
        ensureProfile(resource, CollidingSliceObservationProfile.canonicalUrl);
        resource.component = ensureSliceDefaults(
            [...(resource.component ?? [])],
            CollidingSliceObservationProfile.categorySliceMatch,
        );
        return new CollidingSliceObservationProfile(resource);
    }

    static createResource (args: CollidingSliceObservationProfileRaw) : Observation {
        const componentWithDefaults = ensureSliceDefaults(
            [...(args.component ?? [])],
            CollidingSliceObservationProfile.categorySliceMatch,
        );

        const resource: Observation = {
            resourceType: "Observation",
            component: componentWithDefaults,
            status: args.status,
            code: args.code,
            meta: { profile: [CollidingSliceObservationProfile.canonicalUrl] },
        }
        return resource;
    }

    static create (args: CollidingSliceObservationProfileRaw) : CollidingSliceObservationProfile {
        const resource = CollidingSliceObservationProfile.createResource(args);
        return CollidingSliceObservationProfile.apply(resource);
    }

    toResource () : Observation {
        return this.resource;
    }

    // Field accessors
    getStatus () : ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown") | undefined {
        return this.resource.status as ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown") | undefined;
    }

    setStatus (value: ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown")) : this {
        Object.assign(this.resource, { status: value });
        return this;
    }

    getCode () : CodeableConcept | undefined {
        return this.resource.code as CodeableConcept | undefined;
    }

    setCode (value: CodeableConcept) : this {
        Object.assign(this.resource, { code: value });
        return this;
    }

    getComponent () : ObservationComponent[] | undefined {
        return this.resource.component as ObservationComponent[] | undefined;
    }

    setComponent (value: ObservationComponent[]) : this {
        Object.assign(this.resource, { component: value });
        return this;
    }

    // Extensions
    // Slices
    public setCategory (input?: CollidingSliceObservation_Component_CategorySliceFlat | ObservationComponent): this {
        const match = CollidingSliceObservationProfile.categorySliceMatch
        if (input && matchesValue(input, match)) {
            setArraySlice(this.resource.component ??= [], match, input as ObservationComponent)
            return this
        }
        const value = applySliceMatch<ObservationComponent>(input ?? {}, match)
        setArraySlice(this.resource.component ??= [], match, value)
        return this
    }

    public getCategory(mode: 'flat'): CollidingSliceObservation_Component_CategorySliceFlatAll | undefined;
    public getCategory(mode: 'raw'): ObservationComponent | undefined;
    public getCategory(): CollidingSliceObservation_Component_CategorySliceFlatAll | undefined;
    public getCategory (mode: 'flat' | 'raw' = 'flat'): CollidingSliceObservation_Component_CategorySliceFlatAll | ObservationComponent | undefined {
        const match = CollidingSliceObservationProfile.categorySliceMatch
        const item = getArraySlice(this.resource.component, match)
        if (!item) return undefined
        if (mode === 'raw') return item
        return item as unknown as CollidingSliceObservation_Component_CategorySliceFlatAll
    }

    // Validation
    validate(): { errors: string[]; warnings: string[] } {
        const profileName = "CollidingSliceObservation"
        const res = this.resource
        return {
            errors: [
                ...validateSliceCardinality(res, profileName, "component", {"code":{"coding":[{"system":"http://snomed.info/sct","code":"276885007"}]}}, "category", 1, 1),
                ...validateRequired(res, profileName, "status"),
                ...validateRequired(res, profileName, "code"),
            ],
            warnings: [],
        }
    }

}

"
`;

exports[`TypeScript profile slice corrections inherited-field colliding slice accessor: full profile module pinned 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { CodeableConcept } from "../../hl7-fhir-r4-core/CodeableConcept";
import type { Observation, ObservationComponent } from "../../hl7-fhir-r4-core/Observation";

export type InheritedCollisionObservation_Component_CategorySliceFlat = Omit<ObservationComponent, "code">;
export type InheritedCollisionObservation_Component_CategorySliceFlatAll = InheritedCollisionObservation_Component_CategorySliceFlat;

import {
    ensureProfile,
    applySliceMatch,
    matchesValue,
    setArraySlice,
    getArraySlice,
    ensureSliceDefaults,
    validateRequired,
    validateExcluded,
    validateFixedValue,
    validateSliceCardinality,
    validateSliceFields,
    validateEnum,
    validateReference,
    validateChoiceRequired,
    validateChoiceProhibited,
    validateMustSupport,
} from "../../profile-helpers";

export type InheritedCollisionObservationProfileRaw = {
    status: ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown");
    code: CodeableConcept;
    component?: ObservationComponent[];
}

// CanonicalURL: http://example.org/StructureDefinition/inherited-collision (pkg: codegen.test#1.0.0)
export class InheritedCollisionObservationProfile {
    static readonly canonicalUrl = "http://example.org/StructureDefinition/inherited-collision";

    private static readonly categorySliceMatch: Record<string, unknown> = {
        "code": {"coding":[{"system":"http://snomed.info/sct","code":"276885007"}]},
    }

    private resource: Observation;

    constructor (resource: Observation) {
        this.resource = resource;
    }

    static from (resource: Observation) : InheritedCollisionObservationProfile {
        if (!resource.meta?.profile?.includes(InheritedCollisionObservationProfile.canonicalUrl)) {
            throw new Error(\`InheritedCollisionObservationProfile: meta.profile must include \${InheritedCollisionObservationProfile.canonicalUrl}\`)
        }
        const profile = new InheritedCollisionObservationProfile(resource);
        const { errors } = profile.validate();
        if (errors.length > 0) throw new Error(errors.join("; "))
        return profile;
    }

    static is (resource: unknown) : resource is Observation {
        if (typeof resource !== "object" || resource === null) return false;
        const r = resource as { resourceType?: string; meta?: { profile?: string[] } };
        if (r.resourceType !== "Observation") return false;
        return (r.meta?.profile ?? []).includes(InheritedCollisionObservationProfile.canonicalUrl);
    }

    static apply (resource: Observation) : InheritedCollisionObservationProfile {
        ensureProfile(resource, InheritedCollisionObservationProfile.canonicalUrl);
        resource.component = ensureSliceDefaults(
            [...(resource.component ?? [])],
            InheritedCollisionObservationProfile.categorySliceMatch,
        );
        return new InheritedCollisionObservationProfile(resource);
    }

    static createResource (args: InheritedCollisionObservationProfileRaw) : Observation {
        const componentWithDefaults = ensureSliceDefaults(
            [...(args.component ?? [])],
            InheritedCollisionObservationProfile.categorySliceMatch,
        );

        const resource: Observation = {
            resourceType: "Observation",
            component: componentWithDefaults,
            status: args.status,
            code: args.code,
            meta: { profile: [InheritedCollisionObservationProfile.canonicalUrl] },
        }
        return resource;
    }

    static create (args: InheritedCollisionObservationProfileRaw) : InheritedCollisionObservationProfile {
        const resource = InheritedCollisionObservationProfile.createResource(args);
        return InheritedCollisionObservationProfile.apply(resource);
    }

    toResource () : Observation {
        return this.resource;
    }

    // Field accessors
    getStatus () : ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown") | undefined {
        return this.resource.status as ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown") | undefined;
    }

    setStatus (value: ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown")) : this {
        Object.assign(this.resource, { status: value });
        return this;
    }

    getCode () : CodeableConcept | undefined {
        return this.resource.code as CodeableConcept | undefined;
    }

    setCode (value: CodeableConcept) : this {
        Object.assign(this.resource, { code: value });
        return this;
    }

    getComponent () : ObservationComponent[] | undefined {
        return this.resource.component as ObservationComponent[] | undefined;
    }

    setComponent (value: ObservationComponent[]) : this {
        Object.assign(this.resource, { component: value });
        return this;
    }

    // Extensions
    // Slices
    public setComponentCategory (input?: InheritedCollisionObservation_Component_CategorySliceFlat | ObservationComponent): this {
        const match = InheritedCollisionObservationProfile.categorySliceMatch
        if (input && matchesValue(input, match)) {
            setArraySlice(this.resource.component ??= [], match, input as ObservationComponent)
            return this
        }
        const value = applySliceMatch<ObservationComponent>(input ?? {}, match)
        setArraySlice(this.resource.component ??= [], match, value)
        return this
    }

    public getComponentCategory(mode: 'flat'): InheritedCollisionObservation_Component_CategorySliceFlatAll | undefined;
    public getComponentCategory(mode: 'raw'): ObservationComponent | undefined;
    public getComponentCategory(): InheritedCollisionObservation_Component_CategorySliceFlatAll | undefined;
    public getComponentCategory (mode: 'flat' | 'raw' = 'flat'): InheritedCollisionObservation_Component_CategorySliceFlatAll | ObservationComponent | undefined {
        const match = InheritedCollisionObservationProfile.categorySliceMatch
        const item = getArraySlice(this.resource.component, match)
        if (!item) return undefined
        if (mode === 'raw') return item
        return item as unknown as InheritedCollisionObservation_Component_CategorySliceFlatAll
    }

    // Validation
    validate(): { errors: string[]; warnings: string[] } {
        const profileName = "InheritedCollisionObservation"
        const res = this.resource
        return {
            errors: [
                ...validateSliceCardinality(res, profileName, "component", {"code":{"coding":[{"system":"http://snomed.info/sct","code":"276885007"}]}}, "category", 1, 1),
                ...validateRequired(res, profileName, "status"),
                ...validateRequired(res, profileName, "code"),
            ],
            warnings: [
                ...validateEnum(res, profileName, "category", ["social-history","vital-signs","imaging","laboratory","procedure","survey","exam","therapy","activity"]),
                ...validateMustSupport(res, profileName, "category"),
            ],
        }
    }

}

"
`;
